<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/fakeFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.payhelper.fragment.MainFragment"
        android:label="@string/app_name_real"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_logFragment"
            app:destination="@id/logFragment" />
    </fragment>
    <fragment
        android:id="@+id/logFragment"
        android:name="com.example.payhelper.fragment.LogFragment"
        android:label="@string/log_view_text"
        tools:layout="@layout/fragment_log">
        <action
            android:id="@+id/action_logFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/fakeFragment"
        android:name="com.example.payhelper.fragment.FakeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_fake">
        <action
            android:id="@+id/action_fakeFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
</navigation>