<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="config"
            type="com.example.payhelper.viewmodel.ConfigModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.MainFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/inputUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:text="@{config.username}"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/username_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19"
                app:layout_constraintTop_toBottomOf="@+id/inputApi" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/api_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19"
                app:layout_constraintTop_toTopOf="@+id/guideline21" />

            <EditText
                android:id="@+id/inputApi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/api_hint"
                android:inputType="textPersonName"
                android:text="@{config.api}"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.02" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.98" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.02" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.49" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.51" />

            <Button
                android:id="@+id/btnSaveConfig"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/save_text"
                app:layout_constraintEnd_toStartOf="@+id/guideline23"
                app:layout_constraintStart_toStartOf="@+id/guideline19"
                app:layout_constraintTop_toBottomOf="@+id/switchSmsStatus" />

            <Button
                android:id="@+id/btnGotoPermission"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/goto_permission_text"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toTopOf="@+id/btnSaveConfig" />

            <Button
                android:id="@+id/btnToggleService"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{config.isRunning ? @string/stop_text : @string/start_text}"
                app:layout_constraintEnd_toStartOf="@+id/guideline23"
                app:layout_constraintStart_toStartOf="@+id/guideline19"
                app:layout_constraintTop_toBottomOf="@+id/btnSaveConfig" />

            <Button
                android:id="@+id/btnGotoLog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/log_view_text"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline24"
                app:layout_constraintTop_toTopOf="@+id/btnToggleService" />

            <Switch
                android:id="@+id/switch9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="@={config.networkAvailable}"
                android:clickable="false"
                android:text="@string/network_available_text"
                app:layout_constraintBottom_toTopOf="@+id/guideline22"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19" />

            <Switch
                android:id="@+id/switch10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="@={config.permissionAvailable}"
                android:clickable="false"
                android:text="@string/permission_available_text"
                app:layout_constraintBottom_toTopOf="@+id/switch9"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19" />

            <Switch
                android:id="@+id/switch11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="@={config.isRunning}"
                android:clickable="false"
                android:text="@string/is_running_text"
                app:layout_constraintBottom_toTopOf="@+id/switch10"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19" />

            <TextView
                android:id="@+id/textVersion"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center_horizontal|center_vertical"
                android:text='@{"检查更新(" + @string/app_version + ")"}'
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19"
                app:layout_constraintTop_toBottomOf="@id/guideline22" />

            <Switch
                android:id="@+id/switchLogStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="@{config.logEnable}"
                android:text="@string/log_enable_text"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19"
                app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

            <Switch
                android:id="@+id/switchSmsStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="@{config.smsEnable}"
                android:text="@string/sms_enable_text"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline19"
                app:layout_constraintTop_toBottomOf="@+id/switchLogStatus" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>